tests/macros/confirm/page_size.stderr
error: option `page_size` does not exist for kind `confirm`
 --> $DIR/page_size.rs:2:37
  |
2 |     requestty::questions![Confirm { page_size: todo!() }];
  |                                     ^^^^^^^^^
