tests/macros/confirm/page_size.rs
fn main() {
    requestty::questions![Confirm { page_size: todo!() }];
}
